# ClionTutorial

./: .gdbinit  .gitmodules  CMakeLists.txt
App/Common/: CMakeLists.txt
App/Common/Calc/: CMakeLists.txt  Calc.c  Calc.h
App/Embedded/: CMakeLists.txt  main.c
App/Embedded/nRF/: CMakeLists.txt  main.c  nRF5x_cmake_setting.cmake
App/Host/: CMakeLists.txt  main.c
Test/Common/cpputest/: CMakeLists.txt  TestCalc.cpp
Test/Common/googletest/: CMakeLists.txt  test_common.cpp
ToolChain/: CMAKE_TOOLCHAIN_ARM_GCC.cmake  CMAKE_TOOLCHAIN_WIN_GCC.cmake
